<resources>
    <string name="app_name">VOU - Mobile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event">Event</string>
    <string name="this_is_events_list">This is events list</string>
    <string name="event_image">event_image</string>
    <string name="heart_icon">heart_icon</string>
    <string name="add_turn_button">Add_turn_button</string>
    <string name="request_play_turns_from_friends">Get more play turns</string>
    <string name="brandname">BrandName</string>
    <string name="eventname">eventName</string>
    <string name="enter_the_player_s_id_phone_number_email">Enter the player\'s ID/ Phone Number/ Email</string>
    <string name="id_phone_number_email">ID/ Phone Number/ Email</string>
    <string name="request">Request</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have_received_1_turn">You have received 1 turn</string>
    <string name="floating_button">Floating button</string>
    <string name="get_vouchers">Get Vouchers</string>
    <string name="get">GET</string>
    <string name="logogame">logoGame</string>
    <string name="mc">MC</string>
    <string name="claim">Claim</string>
    <string name="ok">OK</string>
</resources>